overflow fixed

--- a/src/style/output.css
+++ b/src/style/output.css
@@ -442,6 +442,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .rounded-\[4px\] {
     border-radius: 4px;
   }
